basic function in progress
please check if bugs exist and compare to sample

--- a/impressionist.vcxproj.filters
+++ b/impressionist.vcxproj.filters
@@ -39,6 +39,21 @@
     <ClCompile Include="PointBrush.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="linebrush.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="circlebrush.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="scatterline.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="scattercircle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="scatterpoint.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap.h">
@@ -63,6 +78,21 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PointBrush.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="linebrush.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="circle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="scatterline.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="scattercircle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="scatterpoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
