--- a/impressionist.vcxproj
+++ b/impressionist.vcxproj
@@ -147,9 +147,19 @@
     <ClCompile Include="OriginalView.cpp" />
     <ClCompile Include="PaintView.cpp" />
     <ClCompile Include="PointBrush.cpp" />
+    <ClCompile Include="linebrush.cpp" />
+    <ClCompile Include="circlebrush.cpp" />
+    <ClCompile Include="scatterline.cpp" />
+    <ClCompile Include="scattercircle.cpp" />
+    <ClCompile Include="scatterpoint.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap.h" />
+    <ClInclude Include="circle.h" />
+    <ClInclude Include="scatterpoint.h" />
+    <ClInclude Include="scattercircle.h" />
+    <ClInclude Include="scatterline.h" />
+    <ClInclude Include="linebrush.h" />
     <ClInclude Include="ImpBrush.h" />
     <ClInclude Include="impressionist.h" />
     <ClInclude Include="impressionistDoc.h" />
