--- a/impressionist.vcxproj.filters
+++ b/impressionist.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="traingle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ImageCursor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap.h">
@@ -105,6 +108,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="traingle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ImageCursor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
