alphamapping Brush(verifying with professor to check if meet requirement)

--- a/impressionist.vcxproj
+++ b/impressionist.vcxproj
@@ -272,12 +272,14 @@
     <ClCompile Include="scatterline.cpp" />
     <ClCompile Include="scattercircle.cpp" />
     <ClCompile Include="scatterpoint.cpp" />
+    <ClCompile Include="AlphaMapBrush.cpp" />
     <ClCompile Include="traingle.cpp" />
     <ClCompile Include="starbrush.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap.h" />
     <ClInclude Include="circleBrush.h" />
+    <ClInclude Include="AlphaMapBrush.h" />
     <ClInclude Include="ImageCursor.h" />
     <ClInclude Include="traingle.h" />
     <ClInclude Include="starbrush.h" />
