--- a/impressionist.vcxproj.filters
+++ b/impressionist.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="ImageCursor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AlphaMapBrush.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap.h">
@@ -111,6 +114,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ImageCursor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AlphaMapBrush.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
