--- a/impressionist.vcxproj.filters
+++ b/impressionist.vcxproj.filters
@@ -1,131 +1,47 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{9cc004fb-df01-4ab7-a5b7-fe10c508fae6}</UniqueIdentifier>
-      <Extensions>cpp;c;cxx;rc;def;r;odl;idl;hpj;bat</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{44221553-6d29-45d0-886a-80fa9894cbb8}</UniqueIdentifier>
-      <Extensions>h;hpp;hxx;hm;inl</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{b89c4043-2e1a-46ad-8c0b-3512354115f9}</UniqueIdentifier>
-      <Extensions>ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe</Extensions>
-    </Filter>
+    <ClCompile Include="Bitmap.cpp" />
+    <ClCompile Include="BlurringBrush.cpp" />
+    <ClCompile Include="ImageCursor.cpp" />
+    <ClCompile Include="ImpBrush.cpp" />
+    <ClCompile Include="Impressionist.cpp" />
+    <ClCompile Include="ImpressionistDoc.cpp" />
+    <ClCompile Include="ImpressionistUI.cpp" />
+    <ClCompile Include="OriginalView.cpp" />
+    <ClCompile Include="PaintView.cpp" />
+    <ClCompile Include="PointBrush.cpp" />
+    <ClCompile Include="linebrush.cpp" />
+    <ClCompile Include="circlebrush.cpp" />
+    <ClCompile Include="scatterline.cpp" />
+    <ClCompile Include="scattercircle.cpp" />
+    <ClCompile Include="scatterpoint.cpp" />
+    <ClCompile Include="AlphaMapBrush.cpp" />
+    <ClCompile Include="SharpeningBrush.cpp" />
+    <ClCompile Include="traingle.cpp" />
+    <ClCompile Include="starbrush.cpp" />
+    <ClCompile Include="KernelBrush.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Bitmap.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ImpBrush.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Impressionist.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ImpressionistDoc.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ImpressionistUI.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="OriginalView.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="PaintView.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="PointBrush.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="linebrush.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="circlebrush.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="scatterline.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="scattercircle.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="scatterpoint.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="starbrush.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="traingle.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ImageCursor.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="AlphaMapBrush.cpp">
-    <ClCompile Include="BlurringBrush.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="SharpeningBrush.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="bitmap.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ImpBrush.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="impressionist.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="impressionistDoc.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="impressionistUI.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="OriginalView.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="PaintView.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="PointBrush.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="linebrush.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="circleBrush.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="scatterline.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="scattercircle.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="scatterpoint.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="starbrush.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="traingle.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ImageCursor.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="AlphaMapBrush.h">
-    <ClInclude Include="BlurringBrush.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="SharpeningBrush.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClInclude Include="bitmap.h" />
+    <ClInclude Include="BlurringBrush.h" />
+    <ClInclude Include="circleBrush.h" />
+    <ClInclude Include="AlphaMapBrush.h" />
+    <ClInclude Include="ImageCursor.h" />
+    <ClInclude Include="SharpeningBrush.h" />
+    <ClInclude Include="traingle.h" />
+    <ClInclude Include="starbrush.h" />
+    <ClInclude Include="scatterpoint.h" />
+    <ClInclude Include="scattercircle.h" />
+    <ClInclude Include="scatterline.h" />
+    <ClInclude Include="linebrush.h" />
+    <ClInclude Include="ImpBrush.h" />
+    <ClInclude Include="impressionist.h" />
+    <ClInclude Include="impressionistDoc.h" />
+    <ClInclude Include="impressionistUI.h" />
+    <ClInclude Include="OriginalView.h" />
+    <ClInclude Include="PaintView.h" />
+    <ClInclude Include="PointBrush.h" />
+    <ClInclude Include="KernelBrush.h" />
   </ItemGroup>
 </Project>
