--- a/impressionist.vcxproj
+++ b/impressionist.vcxproj
@@ -260,6 +260,8 @@
   <ItemGroup>
     <ClCompile Include="Bitmap.cpp" />
     <ClCompile Include="BlurringBrush.cpp" />
+    <ClCompile Include="CurveBrush.cpp" />
+    <ClCompile Include="GlobalFunction.cpp" />
     <ClCompile Include="ImageCursor.cpp" />
     <ClCompile Include="ImpBrush.cpp" />
     <ClCompile Include="Impressionist.cpp" />
@@ -282,8 +284,11 @@
   <ItemGroup>
     <ClInclude Include="bitmap.h" />
     <ClInclude Include="BlurringBrush.h" />
+    <ClInclude Include="BrushStroke.h" />
     <ClInclude Include="circleBrush.h" />
     <ClInclude Include="AlphaMapBrush.h" />
+    <ClInclude Include="GlobalFunction.h" />
+    <ClInclude Include="CurveBrush.h" />
     <ClInclude Include="ImageCursor.h" />
     <ClInclude Include="KernelBrush.h" />
     <ClInclude Include="SharpeningBrush.h" />
