--- a/impressionist.vcxproj.filters
+++ b/impressionist.vcxproj.filters
@@ -43,5 +43,7 @@
     <ClInclude Include="PaintView.h" />
     <ClInclude Include="PointBrush.h" />
     <ClInclude Include="KernelBrush.h" />
+    <ClInclude Include="MosaicPainting.h" />
+    <ClInclude Include="MosaicPainting.cpp" />
   </ItemGroup>
 </Project>
