--- a/impressionist.vcxproj.filters
+++ b/impressionist.vcxproj.filters
@@ -23,6 +23,8 @@
     <ClCompile Include="KernelBrush.cpp" />
     <ClCompile Include="GlobalFunction.cpp" />
     <ClCompile Include="CurveBrush.cpp" />
+    <ClCompile Include="MosaicPainting.cpp" />
+
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap.h" />
@@ -49,6 +51,6 @@
     <ClInclude Include="BrushStroke.h" />
     <ClInclude Include="CurveBrush.h" />
     <ClInclude Include="MosaicPainting.h" />
-    <ClInclude Include="MosaicPainting.cpp" />
+
   </ItemGroup>
 </Project>
