--- a/impressionist.vcxproj.filters
+++ b/impressionist.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="GlobalFunction.cpp" />
     <ClCompile Include="CurveBrush.cpp" />
     <ClCompile Include="MosaicPainting.cpp" />
-
+    <ClCompile Include="Bayesian.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap.h" />
@@ -51,6 +51,6 @@
     <ClInclude Include="BrushStroke.h" />
     <ClInclude Include="CurveBrush.h" />
     <ClInclude Include="MosaicPainting.h" />
-
+    <ClInclude Include="Bayesian.h" />
   </ItemGroup>
 </Project>
